# CAL_FEUP

./: .gitignore
cal_fp01/: CMakeLists.txt  TP1
cal_fp01/src/: Change.cpp  Change.h  Defs.h  Factorial.cpp  Factorial.h  Partitioning.cpp  Partitioning.h  Sum.cpp  Sum.h  Test.cpp
cal_fp02/: CMakeLists.txt  TP2
cal_fp02/src/: Labirinth.cpp  Labirinth.h  Sudoku.cpp  Sudoku.h  Test.cpp
cal_fp03/: CMakeLists.txt  TP3
cal_fp03/src/: NearestPoints.cpp  NearestPoints.d  NearestPoints.h  Point.cpp  Point.h  Test.cpp
cal_fp04/: CMakeLists.txt  TP4
cal_fp04/src/: Graph.h  Person.cpp  Person.d  Person.h  Test.cpp  Test.d
cal_fp05/: CMakeLists.txt
cal_fp05/src/: Graph.h  MutablePriorityQueue.h  Test.cpp
cal_fp06/: CMakeLists.txt
cal_fp06/src/: FichaJUNG.cpp
cal_fp07/: CMakeLists.txt
cal_fp07/src/: Graph.h  Test.cpp
cal_fp08/: CMakeLists.txt
cal_fp08/src/: Graph.h  Test.cpp
cal_fp10/: CMakeLists.txt  TP10  text1.txt  text2.txt
cal_fp10/src/: Test.cpp  matcher.cpp
